--- a/Styleguide.css
+++ b/Styleguide.css
@@ -227,7 +227,7 @@ input:focus {outline: none;}
 footer{
     width:100%;
     height:100px;
-    background-color:red;
+    background-color:white;
     }
 
 footer p{
